<resources>
    <string name="app_name">JDub Bucket List</string>
    <string name="log_in_google">Google Sign In</string>
    <string name="password">Enter your Password</string>
    <string name="email">Enter Your Email</string>
    <string name="log_in_email">Log In</string>
    <string name="register">Register</string>
    <string name="re_enter_password">Re-enter your password</string>
    <string name="backgroundImage">Background Image</string>
    <string name="view_bucket_list">View Bucket List</string>
    <string name="add_to_bucket_list">Add new Bucket List Item</string>
    <string-array name="ranking">
        <item>Top 10 Ranking</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
</resources>