<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <EditText
        android:id="@+id/loginPasswordField"
        android:layout_width="@dimen/input_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="@id/loginEmailField"
        app:layout_constraintTop_toBottomOf="@+id/loginEmailField" />

    <EditText
        android:id="@+id/loginEmailField"
        android:layout_width="@dimen/input_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="148dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/eLoginButton"
        android:layout_width="@dimen/input_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="352dp"
        android:drawableLeft="@drawable/ic_baseline_email_24"
        android:text="@string/log_in_email"
        app:layout_constraintStart_toStartOf="@id/loginPasswordField"
        app:layout_constraintTop_toBottomOf="@+id/loginPasswordField" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="160dp"
        android:layout_height="64dp"
        android:layout_marginTop="16dp"
        android:text="@string/register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eLoginButton" />
</androidx.constraintlayout.widget.ConstraintLayout>